[3, 4 단계 - 체스] 디투(박정훈) 미션 제출합니다. (#620)
* docs: 기능 목록 작성

* feat: Rank Enum 생성

* feat: File Enum 생성

* docs: 기능 목록 문법 오류 수정

* feat: Square cache 설정

* refactor: 패키지 구성 변경

* feat: 적 인식 기능 구현

* docs: 완료한 기능 체크

* feat: 같은 File, Rank인지 확인하는 기능 구현

* docs: Square 기능 목록 업데이트

* feat: Rank 비교 기능 구현

* feat: Rank 1차이인지 비교하는 기능 구현

* feat: Square 이동 기능 구현

* feat: 같은 칸인지 확인하는 기능 구현

* docs: Square 기능 목록 업데이트

* feat: Pawn 이동 가능 확인 기능 구현

* refactor: 필요없는 메소드 삭제

* feat: 보드 생성 기능 구현

* docs: 완료한 기능 체크

* feat: 나이트 이동 구현

* refactor: 이동 -> 이동 가능으로 수정

* feat: 말 별로 이동 방향 결정 기능 구현

* docs: PieceDirection 기능 문서에 추가

* feat: 더블 폰 푸시 기능 구현

* feat: 폰 앞으로 이동 기능 구현

* feat: 적이 없는 경우에만 대각 이동 가능하도록 구현

* feat: 비숍 이동 기능 구현

* feat: 룩 이동 기능 구현

* feat: 킹 이동 기능 구현

* feat: 퀸 이동 기능 구현

* docs: 완료한 기능 체크

* feat: 시작 메시지 출력 기능 구현

* feat: 시작 메시지 입력 기능 구현

* feat: 현 게임 상태 출력 기능 구현

* feat: 게임 실행 기능 구현

* feat: scanner 자원 정리

* refactor: 매직 넘버 적용

* refactor: GameStatusDto 가독성 좋게 변경

* refactor: BoardMaker -> BoardFactory 클래스 명 변경

* refactor: board 구조 개선

* refactor: ChessGame 서비스 생성

* refactor: indent, 메서드 길이 요구 사항 적용

* refactor: Pawn 메소드 분리

* refactor: final 키워드 적용

* docs: 완료한 기능 체크

* refactor: 메소드 분리

* fix: restart 안되었던 버그 수정

* style: 필요 없는 임포트 제거

* refactor: restart 기능 리팩터링

* feat: 차례 기능 구현

* feat: 차례 부여 기능 게임에 적용

* refactor: view에 보여지는 말 종류 저장 방식 변경

* fix: 본인 차례가 아닌 말 이동 시 프로그램 종료되는 오류 수정

* feat: 위치 차이 저장 객체 생성

* refactor: Pawn -> WhitePawn, BlackPawn 으로 분리

* refactor: final 키워드로 불변 보장

* docs: 기능 목록 업데이트

* refactor: 방향 찾는 메서드 분리

* refactor: 메소드 추상화 수준 변경

* refactor: Square key 선정 방식 변경

* refactor: 폰 방향 찾는 메소드에서 더블폰푸시 확인하는 부분 메소드로 분리

* refactor: 상수 final 키워드와 static 키워드 순서 변경

* refactor: 폰 대각 이동 확인 부분 메소드 분리

* refactor: 체스판 범위 벗어난 경우 커스텀 예외로 변경

* refactor: 필요없는 import 제거

* refactor: 매직 넘버 상수화

* docs: 기능 목록 정리

* feat: 왕이 죽었는지 